infra/manifests/wealthfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wealthfolio
  namespace: wealthfolio
  labels:
    app.kubernetes.io/name: wealthfolio
    app.kubernetes.io/instance: wealthfolio
spec:
  type: ClusterIP
  ports:
    - port: 8088
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: wealthfolio
    app.kubernetes.io/instance: wealthfolio
